get Hint User list
